# tbank-LoyalT

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: docker-build.yml  lint.yml  test.yml
app/: main.py
deploy/: Dockerfile  README.md  docker-compose.yml
docs/: functional_requirements.md
frontend/admin/: .gitignore  angular.json  package.json
frontend/admin/src/: index.html  styles.scss
frontend/admin/src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.ts
frontend/admin/src/app/core/: admin-identity.service.ts  api-base.tokens.ts  format.ts
frontend/cashier/: .gitignore  angular.json  package.json  tsconfig.app.json
frontend/cashier/public/: manifest.webmanifest
frontend/cashier/src/: index.html  styles.scss
frontend/cashier/src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.ts
frontend/cashier/src/app/core/: cashier-identity.service.ts  format.ts  notify.service.ts
frontend/customer/: README.md  angular.json  package.json
frontend/customer/src/: index.html  styles.scss
frontend/customer/src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.ts
frontend/customer/src/app/core/: api-base.tokens.ts  customer-id.service.ts  enrollments.store.ts  format.ts  notify.service.ts  theme.service.ts  (+1 more)
frontend/partner/: angular.json  package.json
frontend/partner/src/: index.html  styles.scss
frontend/partner/src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.ts
frontend/shared/: package.json
frontend/shared/src/: endpoints.ts  index.ts  types.ts
libs/loyalt-common/: README.md  pyproject.toml
libs/loyalt-common/src/loyalt_common/: __init__.py  context.py  kafka.py  logging.py  middleware.py  openapi.py
services/admin-service/: .env.example  README.md  alembic.ini
services/admin-service/alembic/: env.py
services/admin-service/alembic/versions/: 0001_initial.py
services/admin-service/app/: config.py  deps.py  errors.py  main.py  models.py
services/admin-service/app/clients/: partner.py
services/core-service/: .env.example  README.md
services/core-service/alembic/: env.py
services/core-service/alembic/versions/: 0001_initial.py  0002_enrollment_short_code.py  0003_partition_transaction.py  0004_analytics_projection.py  0005_points_expiration.py  0005_program_settings.py  0006_points_expiration.py  0007_customer_birthday_bonus_triggers.py  0007_idempotency_key.py  0008_idempotency_key.py  0009_partner_categories.py
services/core-service/app/: audience.py  config.py  consumer.py  database.py  deps.py  events.py  inbox.py  internal_router.py  jwt_tokens.py  main.py  models.py
services/notification-service/: .env.example  README.md
services/notification-service/alembic/: env.py
services/notification-service/alembic/versions/: 0001_initial.py
services/notification-service/app/: config.py  consumer.py  database.py  deps.py  errors.py  main.py  models.py
services/partner-service/: .env.example  README.md
services/partner-service/alembic/: env.py
services/partner-service/alembic/versions/: 0001_initial.py  0002_staff.py  0003_broadcast.py  0004_partner_categories.py
services/partner-service/app/: config.py  deps.py  events.py  main.py  models.py  storage.py
services/partner-service/app/clients/: core.py
tests/admin_service/: conftest.py  test_admins.py  test_catalog.py
tests/core_service/: conftest.py  test_bonus_campaigns.py  test_points_idempotency.py  test_programs.py  test_triggers.py
tests/notification_service/: conftest.py  test_devices.py  test_notifications.py
tests/partner_service/: conftest.py  test_accounts.py  test_applications.py
(+191 files in other folders)
