[project]
name = "tbank-loyalt"
version = "0.1.0"
description = "-"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiokafka>=0.14.0",
    "alembic>=1.18.4",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "greenlet>=3.5.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]

[tool.black]
extend-exclude = "env|.env|venv|.venv"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
