[project]
name = "tbank-loyalt"
version = "0.1.0"
description = "-"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiokafka>=0.14.0",
    "alembic>=1.18.4",
    "boto3>=1.35.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "greenlet>=3.5.0",
    "loyalt-common",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]

[tool.uv.workspace]
members = ["libs/*"]

[tool.uv.sources]
loyalt-common = { workspace = true }

[tool.black]
extend-exclude = "env|.env|venv|.venv"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
]

[tool.isort]
profile = "black"
multi_line_output = 3
known_first_party = ["app"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0",
    "black>=26.5.0",
    "isort>=8.0.1",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.15.13",
    "ty>=0.0.37",
]
