[project]
name = "loyalt-common"
version = "0.1.0"
description = "Общий код платформы LoyalT: структурное логирование, request-id, Kafka-контекст."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "starlette>=0.40.0",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loyalt_common"]
